--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -214,7 +214,7 @@
         marker: " {mark} -----"
         block: |
           ## short URL
-          $wgArticlePath = "/openresearch/$1";
+          $wgArticlePath = "/{{ mediawiki_name }}/$1";
 
           ## debugging
           #error_reporting( E_ALL | E_STRICT );
