--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,6 @@ jobs:
         uses: roles-ansible/check-ansible-debian-stable-action@master
         with:
           targets: "./ansible/playbook.yml"
+          group: "local"
           hosts: "localhost"
           requirements: "./ansible/requirements.yml"
