--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: ansible check with debian:stable
+      - name: ansible check with debian:buster
 
-        uses: roles-ansible/check-ansible-debian-stable-action@master
+        uses: roles-ansible/check-ansible-debian-buster-action@master
         with:
           targets: "./ansible/playbook.yml"
           group: "local"
