attempt to run on Debian 11, use virtual php-packages instead of hardcoded versions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,15 +13,16 @@ jobs:
     ## "Service is in unknown state" issue
     ## https://github.com/ansible/ansible/issues/71528
     ## ubuntu-latest: Linux 5.11.0-1021-azure #22~20.04.1-Ubuntu SMP Fri Oct 29 01:11:25 UTC 2021
+    ## ubuntu-18-04:  Linux 5.4.0-1063-azure #66~18.04.1-Ubuntu SMP Thu Oct 21 09:59:28 UTC 2021
 
     runs-on: ubuntu-18.04
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: ansible check with debian:buster
+      - name: ansible check with debian:bullseye
 
-        uses: alexander-gesinn/check-ansible-debian-buster-action@master
+        uses: alexander-gesinn/check-ansible-debian-bullseye-action@master
         with:
           targets: "./ansible/playbook.yml"
           group: "local"
