--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -92,11 +92,15 @@
         name:
           - git
           - joe
-          - php7.3-curl     # ES
-          - php7.3-gd
-          - php7.3-intl
+#          - php7.3-curl     # ES
+#          - php7.3-gd
+#          - php7.3-intl
+          - php-curl
+          - php-gd
+          - php-intl
           - php-memcached
-          - php7.3-zip
+#          - php7.3-zip
+          - php-zip
         state: present
 
 
