--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -18,3 +18,6 @@ mediawiki_admin_name: Admin
 mediawiki_admin_password: wiki4everyone
 mediawiki_database_password: openresearch
 mediawiki_server: http:\\localhost:8080
+
+mediawiki_custom_source: "/vagrant/_custom"
+mediawiki_custom_destination: "{{ mediawiki_destination }}/wiki-{{ mediawiki_name }}"
