--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -236,8 +236,6 @@
         mediawiki_extension_source: "mediawiki/chameleon-skin"
         mediawiki_extension_source_version: "1.7.1"
         mediawiki_extension_config: |
-          # wfLoadExtension( 'Bootstrap' );
-          # wfLoadSkin( 'chameleon' );
           # $wgDefaultSkin="chameleon";
           # $egChameleonLayoutFile= __DIR__ . "/skins/chameleon/layouts/standard.xml";
           # $wgLogo=$wgScriptPath . "/resources/assets/core.png";
@@ -400,8 +398,6 @@
         mediawiki_extension_disabled: false
         mediawiki_extension_source: "https://github.com/wikimedia/mediawiki-extensions-CookieWarning/archive/60929abb696499138032ea3d086f94c4677f11ef.tar.gz"
 
-
-
     # Extension:DataTransfer 1.1 → 1.2
     - name: install DataTransfer extension
       include_role:
@@ -411,6 +407,21 @@
         mediawiki_extension_install_type: "tar"
         mediawiki_extension_disabled: false
         mediawiki_extension_source: "https://github.com/wikimedia/mediawiki-extensions-DataTransfer/archive/refs/tags/1.2.tar.gz"
+
+    # Extension:DisplayTitle 2.2.0
+    - name: install DisplayTitle extension
+      include_role:
+        name: gesinnit.mediawiki_extension
+      vars:
+        mediawiki_extension_name: "DisplayTitle"
+        mediawiki_extension_install_type: "tar"
+        mediawiki_extension_disabled: false
+        mediawiki_extension_source: "https://github.com/wikimedia/mediawiki-extensions-DisplayTitle/archive/refs/tags/2.2.0.tar.gz"
+        mediawiki_extension_config: |
+          $wgAllowDisplayTitle = true;
+          $wgRestrictDisplayTitle = false;
+          $wgDisplayTitleHideSubtitle = true;
+          $wgDisplayTitleExcludes = [ "Special:ListRedirects", "Special:DoubleRedirects", "Special:MovePage" ];
 
     # Extension:HeaderTabs 1.2 → 1.3
     - name: install HeaderTabs extension
